<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.feedbacker.FeedBackerFragment">

    <include
        android:id="@+id/container_digit_cells"
        layout="@layout/digit_cells"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="3dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/plus_count"
        android:layout_width="70dp"
        android:layout_height="@dimen/feedbacker_button_height"
        android:layout_marginStart="@dimen/page_common_start_margin"
        android:layout_marginTop="@dimen/feedbacker_marginTop"
        android:text="@string/placed_digits"
        android:textAlignment="center"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_digit_cells" />


    <TextView
        android:id="@+id/minus_count"
        android:layout_width="70pt"
        android:layout_height="@dimen/feedbacker_button_height"
        android:layout_marginTop="@dimen/feedbacker_marginTop"
        android:layout_marginEnd="16dp"
        android:text="@string/non_placed_digits"
        android:textAlignment="center"
        android:hint="@string/non_placed_digits"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container_digit_cells" />

    <Button
        android:id="@+id/plus_button"
        android:layout_width="@dimen/feedbacker_button_width"
        android:layout_height="@dimen/feedbacker_button_height"
        android:layout_marginStart="@dimen/page_common_start_margin"
        android:layout_marginTop="@dimen/feedbacker_marginTop"
        android:textSize="30sp"
        android:textAlignment="center"
        android:text="@string/plus_sign"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_history_list" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="@dimen/feedbacker_button_width"
        android:layout_height="@dimen/feedbacker_button_height"
        android:layout_marginTop="@dimen/feedbacker_marginTop"
        android:layout_marginEnd="16dp"
        android:text="@string/minus_sign"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_history_list" />

    <Button
        android:id="@+id/done_button"
        android:layout_width="90dp"
        android:layout_height="@dimen/feedbacker_button_height"
        android:layout_marginTop="@dimen/feedbacker_marginTop"
        android:text="@string/done"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/minus_button"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toEndOf="@id/plus_button"
        app:layout_constraintTop_toBottomOf="@+id/feedback_history_list" />

    <TextView
        android:id="@+id/feedback_history_header"
        android:layout_width="@dimen/header_1_width"
        android:layout_height="@dimen/header_1_height"
        android:layout_marginStart="@dimen/page_common_start_margin"
        android:layout_marginTop="16dp"
        android:text="@string/feedback_numbers_list_header"
        android:textAlignment="center"
        android:textSize="@dimen/textHeader_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/minus_count" />

    <ListView
        android:id="@+id/feedback_history_list"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginHorizontal="@dimen/page_common_start_margin"
        android:layout_marginStart="@dimen/page_common_start_margin"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_history_header" />

    <include
        android:id="@+id/progressBar"
        layout="@layout/progress_bar" />
</androidx.constraintlayout.widget.ConstraintLayout>