...
        android:textSize="@dimen/textHeader_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guessing_number_3" />


    <ListView
        android:id="@+id/guesture_history_list"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:divider="@null"
        android:fastScrollEnabled="true"
        android:scrollbarStyle="insideInset"
        android:textAlignment="gravity"
...
